fix: spacing

--- a/css/sections/carousel.css
+++ b/css/sections/carousel.css
@@ -64,6 +64,6 @@
   }
 
   .carousel__card-wrapper {
-    margin: 0 30px;
+    margin: 0 10px;
   }
 }
