--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -22,6 +22,11 @@
   display: none;
 }
 
+.header {
+  margin-top: 3rem;
+  margin-bottom: 6rem;
+}
+
 .header .container {
   display: flex;
   justify-content: space-between;
